@@ -276,7 +276,7 @@ public class AppBookService {
         return topIds.stream()
                 .filter(enrichedMap::containsKey)
                 .map(id -> mobileBookMapper.toSummary(enrichedMap.get(id), progressMap.get(id)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<AppBookSummary> getContinueListening(Integer limit) {
@@ -299,7 +299,7 @@ public class AppBookService {
         return topIds.stream()
                 .filter(enrichedMap::containsKey)
                 .map(id -> mobileBookMapper.toSummary(enrichedMap.get(id), progressMap.get(id)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<AppBookSummary> getRecentlyAdded(Integer limit) {
@@ -322,7 +322,7 @@ public class AppBookService {
 
         return bookPage.getContent().stream()
                 .map(book -> mobileBookMapper.toSummary(book, progressMap.get(book.getId())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<AppBookSummary> getRecentlyScanned(Integer limit) {
@@ -344,7 +344,7 @@ public class AppBookService {
 
         return bookPage.getContent().stream()
                 .map(book -> mobileBookMapper.toSummary(book, progressMap.get(book.getId())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public AppPageResponse<AppBookSummary> getRandomBooks(
@@ -406,7 +406,7 @@ public class AppBookService {
                 .filter(Objects::nonNull)
                 .filter(BookEntity::hasFiles)
                 .map(bookEntity -> mobileBookMapper.toSummary(bookEntity, progressMap.get(bookEntity.getId())))
-                .collect(Collectors.toList());
+                .toList();
 
         return AppPageResponse.of(summaries, pageNum, pageSize, booksPage.getTotalElements());
     }
@@ -1051,7 +1051,7 @@ public class AppBookService {
             specs.add(AppBookSpecification.withProgress(userId, true));
         }
 
-        return AppBookSpecification.combine(specs.toArray(new Specification[0]));
+        return AppBookSpecification.combine(specs.toArray(Specification[]::new));
     }
 
     private String getSortField(String sortBy) {
@@ -1118,7 +1118,7 @@ public class AppBookService {
             specs.add(AppBookSpecification.inLibrary(libraryId));
         }
 
-        return AppBookSpecification.combine(specs.toArray(new Specification[0]));
+        return AppBookSpecification.combine(specs.toArray(Specification[]::new));
     }
 
     private AppPageResponse<AppBookSummary> buildPageResponse(
@@ -1132,7 +1132,7 @@ public class AppBookService {
 
         List<AppBookSummary> summaries = books.stream()
                 .map(book -> mobileBookMapper.toSummary(book, progressMap.get(book.getId())))
-                .collect(Collectors.toList());
+                .toList();
 
         return AppPageResponse.of(summaries, pageNum, pageSize, bookPage.getTotalElements());
     }
